--- a/TODO.txt
+++ b/TODO.txt
@@ -1,23 +1,20 @@
-# Jail
+# esx_jobs
+- Balancear salários
+
+# esx_jailer
 - Testar!
 
-# DMVSchool
-- Traduzir prova teórica
-- Testar!
+# esx_dmvschool
+- Alguns erros de tradução, revisar!
+- Testar
 
-# Thief
-- Testar!
-
-# Traduzir
-- esx_vehicle_inventory
+# esx_hospital
+- Alguns médicos estão aparecendo fora da marca
 
 # Revisão de Tradução
 - esx_jailer
 - esx_accessories
 - esx_mecanojob
-
-# esx_dmvschool
-- Alguns erros de tradução, revisar!
-
-# esx_hospital
-- Alguns médicos estão aparecendo fora da marca
+- esx_outlawalert
+- esx_vehicle_inventory
+- esx_jailer
