big sunday update
esx_aiomenu + locksystem with interactsound + trying to fix some cv_control problem rolling back the files

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,15 +1,21 @@
 # esx_jobs
 - Balancear salários
 
+# esx_shop
+- Adicionar itens
+- Colocar Blips diferentes para bares
+
 # esx_jailer
 - Testar!
 
 # esx_dmvschool
-- Alguns erros de tradução, revisar!
 - Testar
 
 # esx_hospital
 - Alguns médicos estão aparecendo fora da marca
+
+# esx_aiomenu
+- Adicionar menu para outras profissões e funções
 
 # Revisão de Tradução
 - esx_jailer
@@ -18,3 +24,4 @@
 - esx_outlawalert
 - esx_vehicle_inventory
 - esx_jailer
+- esx_dmvschool
